--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -1,20 +1,72 @@
-.card-item img {
-    width: 100%;
-}
-
-.card-item {
+.item-product {
+    float: left;
+    width: calc(20% - 8px);
+    box-shadow: 1px 1px 5px #afafaf47;
+    border: 10px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: relative;
+    margin-right: 10px;
+    margin-bottom: 10px;
+
+    .float-options {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+
+        p {
+            font-size: 12px;
+            padding: 5px;
+            margin: 0;
+            line-height: 16px;
+            width: 50px;
+            text-align: center;
+            background: #00a650;
+            color: white;
+        }
+
+        button {
+            background: none;
+            border: none;
+            margin-right: 5px;
+        }
+    }
+
+    img {
+        width: 80%;
+        margin-top: 15px;
+    }
 }
 
-.card-item p {
-    font-size: 18px;
-    font-weight: 700;
-    margin-top: 10px;
-    margin-bottom: 10px;
+.detail-product>p:nth-of-type(1) {
+    border-bottom: 1px solid #ccc;
+    margin: 0;
+    padding: 20px 0px;
+    text-transform: uppercase;
+    font-size: 17px;
+    letter-spacing: 1.5px;
 }
 
-.card-item span {
-    margin-bottom: 10px;
-    font-size: 16px;
+.detail-product>p:nth-of-type(2),
+.detail-product>p:nth-of-type(3) {
+    font-size: 12px;
+    /* font-weight: 100; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.detail-product>p svg {
+    margin-right: 6px;
+}
+
+.item-product:nth-of-type(5n) {
+    margin-right: 0px !important;
 }
