--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,4 +1,4 @@
-.navbar-primary {
+.nav-primary {
     float: left;
     width: 100%;
     box-shadow: 1px 3px 5px #e7e7e7;
@@ -6,29 +6,21 @@
     justify-content: space-between;
     padding: 10px 20px;
 
-    .cart-widget {
-        display: flex;
-        align-items: center;
-    }
-
     ul {
         list-style: none;
         display: flex;
-
         li {
             margin: 0px 10px;
-
             button {
                 background: none;
                 border: none;
                 font-size: 18px;
                 cursor: pointer;
                 text-transform: uppercase;
-
                 &:hover {
                     text-decoration: underline;
                 }
             }
-        }
-    }
+        }        
+    } 
 }
