--- a/src/components/BooksList/BooksList.scss
+++ b/src/components/BooksList/BooksList.scss
@@ -38,6 +38,11 @@
       }
   }
 
+  // img {
+  //     width: 80%;
+  //     margin-top: 15px;
+  // }
+
   .countProd {
       display: flex;
       /* height: 77px; */
