--- a/src/components/ItemDetail/ItemDetail.scss
+++ b/src/components/ItemDetail/ItemDetail.scss
@@ -20,14 +20,14 @@
   max-height: 100%;
 }
 
-.itemDetail__nombre{
+.itemDetail__name {
   width: 100%;
   text-align: left;
   font-size: 3rem;
   font-weight: 1000;
 }
 
-.itemDetail__precio{
+.itemDetail__price {
   width: 100%;
   text-align: left;
   font-size: 2rem;
