--- a/src/components/ItemListContainer/ItemListContainer.scss
+++ b/src/components/ItemListContainer/ItemListContainer.scss
@@ -4,8 +4,8 @@
   margin-bottom: 20px;
 }
 
-.item__list__container__name {
-  text-align: center;
-  margin: 30px 0;
-  font-size: 2rem;
-}
+// .item__list__container__name {
+//   text-align: center;
+//   margin: 30px 0;
+//   font-size: 2rem;
+// }
